k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solve-x-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:109049466470:certificate/0de875a1-615f-4b1b-bb30-be734a9cefee
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: solve2x.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solve-x-backend-svc
                port: {number: 80}
    - host: www.solve2x.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solve-x-backend-svc
                port: {number: 80}
